<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:minWidth="364dp"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <TextView
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp"
        android:layout_gravity="center"
        android:text="@string/wpl_error_title"
        android:textAllCaps="false"
        android:textColor="@color/greyscale_4"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/greyscale_5"/>


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/wpl_error"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <View
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/greyscale_7"/>

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="@color/greyscale_4"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        style="?android:attr/buttonBarButtonStyle"/>
</LinearLayout>