<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:minWidth="364dp"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <TextView
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="18dp"
            android:text="@string/switch_draw_modes"
            android:textAllCaps="false"
            android:textColor="@color/greyscale_4"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/greyscale_5"/>

    <TextView
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16sp"
            android:minLines="3"
            android:maxLines="4"
            android:textColor="@color/greyscale_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/no_network_snap_message"/>

    <View
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/greyscale_7"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/noButton"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/greyscale_4"
                android:textAllCaps="false"
                android:text="@string/no"
                style="?android:attr/buttonBarButtonStyle"/>

        <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/greyscale_7"/>

        <Button
                android:id="@+id/yesButton"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/greyscale_4"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>