<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minHeight="500dp"
             android:minWidth="800dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/map_draw_modal_image"
            android:layout_width="320dp"
            android:layout_height="500dp"
            android:layout_alignParentLeft="true"
            android:background="@color/ifit_blue"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_toRightOf="@+id/map_draw_modal_image"
            android:orientation="vertical"
            android:padding="32dp"> 

            <com.ifit.android.werewolf.view.IfitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/map_workout_list_activity_draw_modal_dialog_title"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textColor="@color/ifit_blue"
                android:textSize="@dimen/map_how_to_draw_modal_title_size"
                app:typeface="proxima_regular"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginRight="180dp"
                android:layout_marginLeft="192dp"
                android:layout_marginTop="@dimen/map_how_to_draw_modal_text_bottom_margin"
                android:layout_marginBottom="@dimen/map_how_to_draw_modal_text_bottom_margin"
                android:background="@color/greyscale_5"/>

            <com.ifit.android.werewolf.view.IfitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/map_how_to_draw_modal_text_bottom_margin"
                android:gravity="left"
                android:text="@string/map_workout_list_activity_draw_modal_dialog_info_1"
                android:textAlignment="gravity"
                android:textSize="@dimen/map_how_to_draw_modal_text_size"
                app:typeface="proxima_regular"
                />

            <com.ifit.android.werewolf.view.IfitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/map_how_to_draw_modal_text_bottom_margin"
                android:gravity="left"
                android:text="@string/map_workout_list_activity_draw_modal_dialog_info_2"
                android:textAlignment="gravity"
                android:textSize="@dimen/map_how_to_draw_modal_text_size"
                app:typeface="proxima_regular"
                />

            <com.ifit.android.werewolf.view.IfitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/map_how_to_draw_modal_text_bottom_margin"
                android:gravity="left"
                android:text="@string/map_workout_list_activity_draw_modal_dialog_info_3"
                android:textAlignment="gravity"
                android:textSize="@dimen/map_how_to_draw_modal_text_size"
                app:typeface="proxima_regular"
                />

            <com.ifit.android.werewolf.view.IfitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/map_how_to_draw_modal_text_bottom_margin"
                android:gravity="left"
                android:text="@string/map_workout_list_activity_draw_modal_dialog_info_4"
                android:textAlignment="gravity"
                android:textSize="@dimen/map_how_to_draw_modal_text_size"
                app:typeface="proxima_regular"
                />

            <com.ifit.android.werewolf.view.IfitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/map_how_to_draw_modal_text_bottom_margin"
                android:gravity="left"
                android:text="@string/map_workout_list_activity_draw_modal_dialog_info_5"
                android:textAlignment="gravity"
                android:textSize="@dimen/map_how_to_draw_modal_text_size"
                app:typeface="proxima_regular"
                />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>