<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minWidth="364dp"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp"
        android:text="@string/create_map_workout"
        android:textAllCaps="false"
        android:textColor="@color/greyscale_4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/greyscale_5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Workout Type:"
                android:textStyle="normal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp" />

            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/workout_types"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:singleLine="true"
                style="@style/EditTextDialog"
                android:hint="@string/workout_title"
                android:maxLength="256"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:padding="16dp" />


            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                style="@style/EditTextDialog"
                android:maxLength="128"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:hint="@string/description_optional" />

            <View
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/greyscale_4"
                    android:textAllCaps="false"
                    android:text="@string/cancel"
                    style="?android:attr/buttonBarButtonStyle" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/dividerVertical" />

                <Button
                    android:id="@+id/createButton"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/greyscale_4"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>