<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

    <com.ifit.android.werewolf.view.IFitSidePhotoView
        android:id="@+id/goal_side_photo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        />

    <RadioGroup
        android:id="@+id/goalWorkoutToggleButtons"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/goal_configurator_radio_button_width"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/goal_layout_header"
        android:background="@color/greyscale_7"
        android:orientation="horizontal">

        <com.ifit.android.werewolf.view.IfitRadioButton
            style="@style/SetAGoalRadioButtonStyle"
            android:id="@+id/timeGoalButton"
            android:layout_width="@dimen/goal_configurator_radio_button_width"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_time_large"
            android:checked="true"
            custom:typeface="proxima_bold"
            android:text="@string/time"
            />

        <com.ifit.android.werewolf.view.IfitRadioButton
            style="@style/SetAGoalRadioButtonStyle"
            android:id="@+id/calorieGoalButton"
            android:layout_width="@dimen/goal_configurator_radio_button_width"
            android:layout_height="match_parent"
            android:checked="false"
            android:drawableTop="@drawable/ic_calories_large"
            custom:typeface="proxima_bold"
            android:text="@string/calorie"
            />

        <com.ifit.android.werewolf.view.IfitRadioButton
            style="@style/SetAGoalRadioButtonStyle"
            android:id="@+id/distanceGoalButton"
            android:layout_width="@dimen/goal_configurator_radio_button_width"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_distance_large"
            custom:typeface="proxima_bold"
            android:text="@string/distance"
            />

        <com.ifit.android.werewolf.view.IfitRadioButton
            style="@style/SetAGoalRadioButtonStyle"
            android:id="@+id/paceGoalButton"
            android:layout_width="@dimen/goal_configurator_radio_button_width"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_pace_large"
            custom:typeface="proxima_bold"
            android:text="@string/pace"
            />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/goal_layout_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        >

        <com.ifit.android.werewolf.goal.view.SetAGoalHeaderView
            android:id="@+id/goal_header_value_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            />

        <com.ifit.android.werewolf.goal.view.SetAGoalHeaderView
            android:id="@+id/goal_header_value_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <com.ifit.android.werewolf.goal.view.SetAGoalHeaderView
            android:id="@+id/goal_header_value_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/goal_layout_value_changers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goalWorkoutToggleButtons"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <com.ifit.android.werewolf.goal.view.SetAGoalValueChangerView
            android:id="@+id/goal_value_changer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            />

        <com.ifit.android.werewolf.goal.view.SetAGoalValueChangerView
            android:id="@+id/goal_value_changer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/greyscale_8"
            />

        <com.ifit.android.werewolf.goal.view.SetAGoalValueChangerView
            android:id="@+id/goal_value_changer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            />

    </LinearLayout>

    <com.ifit.android.werewolf.view.IfitButton
        android:id="@+id/btn_goal_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goal_layout_value_changers"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        custom:typeface="proxima_regular"
        custom:IfitButtonSideTextPadding="@dimen/goal_workout_start_btn_side_text_padding"
        custom:IfitButtonLabel="@string/start"
        custom:IfitButtonBackground="@color/greyscale_8"
        custom:IfitButtonTextAllCaps="true"
        custom:IfitButtonTextColor="@color/green"
        custom:IfitButtonTextSize="@dimen/goal_workout_start_btn_text_size"
        custom:IfitButtonTextIsBold="true"
        custom:IfitButtonImageSrc="@drawable/ic_btn_blue_arrow_inverted"
        custom:IfitButtonCaratWidth="@dimen/goal_workout_start_btn_carat_width"
        custom:IfitButtonCaratHeight="@dimen/goal_workout_start_btn_carat_height"
        />

</RelativeLayout>